--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,14 @@
     <meta name="description" content="Weather application" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>Weather App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Weather Search App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
